2008-05-27  Tomas Frydrych  <tf@o-hand.com>

	* src/Makefile.am:
	Added -D_XOPEN_SOURCE (need to access kill()).

	* src/hd-comp-mgr.c:
	* src/hd-comp-mgr.h:
	* src/hd-dbus.c:
	(hd_comp_mgr_close_client):
	(hd_comp_mgr_hibernate_client):
	Made more robust by adding a timed check followed by a kill() for
	applications that refuse to die.

	(hd_comp_mgr_hibernate_client):
	(hd_comp_mgr_hibernate_all):
	Differentiate between applications that know how to hibernate and
	those that do not; added force parameter to override.

2008-05-27  Tomas Frydrych  <tf@o-hand.com>

	* configure.ac:
	Added dbus to required packages.

	* src/Makefile.am:
	Added hd-atom.[ch] hd-dbus.[ch] and hd-util.[ch] to build.

	* src/hd-comp-mgr.c:
	* src/hd-comp-mgr.h:
	Added dbus hook for hibernation signal,
	Subclassed MBWMCompMgrClutterClient and moved our flags into
	HdCompMgrClientPrivate.

2008-05-23  Tomas Frydrych  <tf@o-hand.com>

	* src/hd-comp-mgr.c:
	* src/hd-comp-mgr.h:
	* src/hd-switcher-group.c:
	Start of implementation of hibernation infrastructure.

2008-05-23  Tomas Frydrych  <tf@o-hand.com>

	* src/hd-comp-mgr.c:
	* src/hd-comp-mgr.h:
	* src/hd-switcher.c:
	Moved HdHome object from HdSwitcher into the CM; handle events on
	the Home actor.

2008-05-23  Tomas Frydrych  <tf@o-hand.com>

	* src/hd-switcher-group.c:
	(hd_switcher_group_show_all):
	(hd_switcher_group_hide_all):
	Removed temporary workaround not necessary now that HdHome is
	present.

2008-05-23  Tomas Frydrych  <tf@o-hand.com>

	* src/Makefile.am:
	* src/hd-home.h:
	* src/hd-home.c:
	Initial stubs for the Home object.

	* src/hd-switcher.c:
	(hd_switcher_constructed):
	(hd_switcher_clicked):
	(hd_switcher_hide_switcher):
	Integrated HdHome object into the WM.

2008-05-22  Tomas Frydrych  <tf@o-hand.com>

	* src/hd-comp-mgr.c:
	(hd_comp_mgr_effect):
	Implemented TV-out style effect for application windows.

2008-05-22  Tomas Frydrych  <tf@o-hand.com>

	Cleaned up comments and code.
