@@ -10,6 +10,8 @@ typedef enum HdAtoms
   HD_ATOM_HILDON_APP_KILLABLE = 0,
   HD_ATOM_HILDON_ABLE_TO_HIBERNATE,
 
+  HD_ATOM_WM_WINDOW_ROLE,
+
   _HD_ATOM_LAST
 } HdAtoms;
 
